<resources>
    <string name="app_name">CalCount</string>
    <string name="label_home">Home</string>
    <string name="label_settings">Settings</string>
    <string name="label_add_meal">Add Meal</string>
    <string name="label_add_item">Add Item</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">Delete</string>
    <string name="empty_meals">No meals to show</string>
    <string name="empty_items">No items to show</string>
    <string name="toast_meal_created">Meal created</string>
    <string name="toast_meal_updated">Meal updated</string>
    <string name="toast_item_created">Food item created</string>
    <string name="toast_item_updated">Food item updated</string>
    <string name="error_meal_name_required">Meal name required</string>
    <string name="error_food_name_required">Food name required</string>
    <string name="error_calories_required">Calories required</string>
    <string name="error_invalid_calories">Invalid calories</string>
    <string name="error_invalid_meal_id">Invalid meal ID</string>
    <string name="title_add_edit_meal">Add / Edit Meal</string>
    <string name="title_add_edit_item">Add / Edit Item</string>
    <string name="label_meal_name">Meal Name</string>
    <string name="hint_meal_name">Enter meal name</string>
    <string name="label_date_time">Date / Time</string>
    <string name="hint_choose_or_auto">Choose or leave auto</string>
    <string name="btn_save_meal">Save Meal</string>
    <string name="label_food_name">Food name</string>
    <string name="label_food_calories">Food Calories</string>
    <string name="btn_submit">Submit</string>
    <string name="settings_maintenance_title">Target</string>
    <string name="settings_hint_number">Change</string>
    <string name="settings_btn_save">Submit</string>
    <string name="toast_saved">Saved</string>
    <string name="change">Change</string>
    <string name="change_hint">Change</string>
    <string name="dialog_confirm_delete_title">Confirm Delete</string>
    <string name="dialog_confirm_delete_meal_message">Are you sure you want to delete this meal? This action cannot be undone.</string>
    <string name="dialog_confirm_delete_food_message">Are you sure you want to delete this food item? This action cannot be undone.</string>
    <string name="dialog_confirm_cancel">Cancel</string>
    <string name="dialog_confirm_delete">Delete</string>
    <string name="error_failed_load_item">Failed to load food item.</string>
</resources>